[gd_scene load_steps=3 format=2]

[ext_resource path="res://Knobs/Hitter.gd" type="Script" id=1]
[ext_resource path="res://Knobs/circle.png" type="Texture" id=2]

[node name="Hitter" type="Node2D"]
script = ExtResource( 1 )

[node name="HitAreaSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ScaleTween" type="Tween" parent="."]

[node name="AlphaTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="ScaleTween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="AlphaTween" to="." method="_on_Tween_tween_all_completed"]
